# powerpoint-maker

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mise.toml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  README.md  debug_agent.py  explore_bee.py  inspect_agent.py  inspect_bee.py  out_fail.pptx  output.txt  pyproject.toml
backend/app/: config.py  exceptions.py  main.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: llm.py  logging.py
backend/app/middleware/: rate_limit.py  security.py
backend/app/services/: cleanup.py  extractor.py  generator.py  layout_catalog.py  layout_intelligence.py  layout_mapper.py  markdown_parser.py  research.py  template.py
backend/app/utils/: file_validation.py
backend/scripts/: create_default_template.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_integration.py  test_layout_intelligence_integration.py  test_pptx_enhancement_api.py
backend/tests/unit/: test_cleanup.py  test_config.py  test_error_recovery.py  test_exceptions.py  test_extractor.py  test_file_validation.py  test_format_preservation.py  test_generator.py  test_generator_two_column.py  test_layout_catalog.py  test_layout_intelligence.py  test_layout_mapper.py  test_llm.py  test_llm_advanced.py  test_logging_coverage.py  test_main_lifecycle.py  test_markdown_parser.py  test_phases_4_5.py  test_polish.py  test_rate_limit.py  test_research_agent.py  test_research_coverage.py  test_research_edge_cases.py  test_research_errors.py  test_research_llm_errors.py  test_routes_coverage.py  test_routes_layout_intelligence.py  test_schemas.py  test_security.py  test_template.py  test_template_analysis.py
docs/: architecture.md  troubleshooting.md
frontend/: .gitignore  .prettierignore  README.md  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/e2e/: full_flow.spec.ts  layout_intelligence.spec.ts  pptx_enhancement.spec.ts
frontend/scripts/: run-webkit-e2e.sh
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  types.ts
frontend/src/__tests__/integration/: App.integration.test.tsx
frontend/src/api/: layoutIntelligence.ts  pptxEnhancement.ts
frontend/src/components/: ContentInput.tsx  ErrorBoundary.tsx  MarkdownPreview.tsx  Preview.tsx  TemplateUploader.tsx  TopicInput.tsx
frontend/src/utils/: logger.ts
frontend/src/utils/__tests__/: logger.test.ts
scripts/: setup-git-hooks.sh
(+9 files in other folders)
