[project]
name = "backend"
version = "0.1.0"
description = "PowerPoint Generator Agent Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beeai-framework>=0.1.76",
    "docling>=2.70.0",
    "duckduckgo-search>=8.1.1",
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.13",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=. --asyncio-mode=auto"
testpaths = [
    "tests",
]
pythonpath = "."
